Changed OpenDataDK keywords-input to be multi-select dropdown..

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -287,21 +287,20 @@
       "GIVE-OPENDATADK-DESCRIPTION": "Beskrivelse",
       "GIVE-OPENDATADK-DESCRIPTION-PLACEHOLDER": "Beskrivelse",
       "GIVE-OPENDATADK-KEYWORDS": "Angiv emneord",
-      "GIVE-OPENDATADK-KEYWORDS-PLACEHOLDER": "IOT, sensor, LoRaWAN, temeratur",
+      "GIVE-OPENDATADK-KEYWORDS-PLACEHOLDER": "Vælg nøgleord fra drop-down",
       "GIVE-OPENDATADK-AUTHORNAME": "Dataejer",
       "GIVE-OPENDATADK-AUTHORNAME-PLACEHOLDER": "Jens Jensen",
       "GIVE-OPENDATADK-AUTHORNAME-INFO": "Ansvarlig afdeling eller person",
       "GIVE-OPENDATADK-AUTHOR-EMAIL": "Dataejers e-mail",
       "GIVE-OPENDATADK-AUTHOR-EMAIL-PLACEHOLDER": "jens@jensen.dk",
-      "ACCEPT-TERMS-PART-ONE": "Jeg accepterer hermed de",
-      "ACCEPT-TERMS-PART-TWO": "Heriblandt at data ikke indeholder følsomme personoplysninger eller personhenførbare informationer.",
-      "TERMS-AND-CONDITIONS": "Gældende vilkår og betingelser for OpenDataDK"
+      "ACCEPT-TERMS-PART-ONE": "Jeg accepterer hermed, at datasættet udgives under en",
+      "TERMS-AND-CONDITIONS": "Creative Commons CC0 1.0 Universel (CC0 1.0) licens"
     },
     "DETAILS": {
       "NAME": "Datasæt titel",
       "RESOURCETITLE": "Datakilde titel",
       "DESCRIPTION": "Beskrivelse",
-      "KEYWORDS": "Keywords",
+      "KEYWORDS": "Emneord",
       "LICENSE": "Licens",
       "AUTHORNAME": "Forfatterens navn",
       "AUTHOREMAIL": "Forfatterens email",
