--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -306,6 +306,20 @@
       "AUTHOREMAIL": "Forfatterens email",
       "URL": "Endpoint til hentning af data",
       "NA": "Intet angivet"
+    },
+    "MAIL": {
+      "DIALOG_TITLE": "Anmod Open Data DK om høstning af data",
+      "DIALOG_TEXT1": "For at få",
+      "DIALOG_TEXT2": "s ODDK datatargets gjort synlige på opendata.dk, skal Open Data DK have en anmodning om at begynde at høste jeres oplysninger fra OS2iot. Hvis du udfylder oplysningerne herunder, sender OS2iot automatisk en mail til Open Data DK",
+      "DIALOG_CONFIRM": "Send mail",
+      "GIVE-OPENDATADK-ORGNAME": "Organisation (i Open Data DK)",
+      "GIVE-OPENDATADK-ORGNAME-PLACEHOLDER": "Organisation",
+      "GIVE-OPENDATADK-COMMENT": "Eventuel kommentar",
+      "GIVE-OPENDATADK-COMMENT-PLACEHOLDER": "Kort kommentar",
+      "SELECTED_ORG_FALLBACK": "organisationen",
+      "WARNING": "Advarsel",
+      "WARNING-TEXT": "Hvis Open Data DK ikke får besked om integrationen, vises datasættet ikke på opendata.dk",
+      "NEVER-AGAIN": "Vis ikke igen. Open Data DK høster allerede denne organisation fra OS2iot."
     }
   },
   "APPLICATION-TABLE": {
