Information bubbles for username/password for MQTT broker

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -752,7 +752,9 @@
       "CERTIFICATE": "Certifikat",
       "PASSWORD": "Brugernavn & kodeord",
       "USERNAME-LABEL": "Brugernavn",
-      "PASSWORD-LABEL": "Kodeord"
+      "USERNAME-HOVER": "Brugernavn som enheden sender med sine beskeder",
+      "PASSWORD-LABEL": "Kodeord",
+      "PASSWORD-HOVER": "Kodeordet som enheden sender med sine beskeder"
     }
   },
   "QUESTION-LORA-GATEWAY": {
