Fixed bug where HTTP Datatarget updates did not save correctly (IOT-1462). Made minor adjustments to layout of ODDK creation-form (IOT-1464 + IOT-1465) and redirect (IOT-1463), as suggested by feedback after test..

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -269,7 +269,7 @@
       "GUIDE2": "Senest modtagede datapakke udstilles via OS2iots API og kan hentes via en URL angivet på det enkelte ODDK-data target og på jeres datasæt på opendata.dk. Der opsamles og udstilles altså ikke historisk data i hverken OS2iot eller på opendata.dk.",
       "GUIDE3": "Nye ODDK-data targets høstes automatisk, og I behøver ikke gøre noget aktivt for at gøre dem tilgængelige på opendata.dk. Hvis I sletter et ODDK-data target forsvinder det af sig selv fra opendata.dk.",
       "GUIDE4": "Datasæt fra OS2iot publiceres under licensen",
-      "GUIDE5": "Open DATA DK Licens.",
+      "GUIDE5": "Creative Commons CC0 1.0 Universel.",
       "PROCEDURE_HEADER": "Procedure ved oprettelse af første data target",
       "PROCEDURE1": "Bliv medlem af Open Data DK, hvis jeres myndighed ikke allerede er det:",
       "PROCEDURE2": "Opret første ODDK-data target i OS2iot",
@@ -1120,6 +1120,7 @@
   },
   "false": "Nej",
   "true": "Ja",
+  "GUIDE": "Guide",
   "HTTP_PUSH": "HTTP Push",
   "Forbidden": "Du har ikke rettigheder til at foretage denne handling",
   "Forbidden resource": "Du har ikke rettigheder til at foretage denne handling",
