Bulk import changes and new type

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -109,7 +109,7 @@
     "DATATARGET-SHOW": "Tilknyttede data targets",
     "MULTICAST-SHOW": "Tilknyttede multicast",
     "MULTICAST-GROUPS": "Multicast-grupper",
-    "IMPORT-CSV": "Bulk import af IoT enheder",
+    "IMPORT-CSV": "Bulk import",
     "IOT-DEVICES": "IoT-enheder",
     "BULK": {
       "TEMPLATE": {
