Added CA to password brokers. Added download button to cert files

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -895,7 +895,8 @@
       "PORT": "Port",
       "TOPIC_NAME": "Topic navn",
       "CERTIFICATE": "Certifikat værdi",
-      "COPY-TO-CLIPBOARD": "Kopier"
+      "COPY-TO-CLIPBOARD": "Kopier",
+      "DOWNLOAD": "Download"
     }
   },
   "MESSAGE": {
