Show message when not able to connect to external broker

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -898,7 +898,8 @@
       "TOPIC_NAME": "Topic navn",
       "CERTIFICATE": "Certifikat værdi",
       "COPY-TO-CLIPBOARD": "Kopier",
-      "DOWNLOAD": "Download"
+      "DOWNLOAD": "Download",
+      "NOCONNECTION": "Denne enhed kunne ikke forbinde til den eksterne broker. Ret indstillingerne til eller slet enheden."
     }
   },
   "MESSAGE": {
