--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -137,6 +137,7 @@
     },
     "DETAILS": "Detaljer",
     "METADATA-FIELD": {
+      "PERMISSIONS": "Brugergrupper",
       "STATUS": "Status",
       "START-DATE": "Startdato",
       "END-DATE": "Slutdato",
