(IOT-1502) Updated description text for data rate

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -963,9 +963,9 @@
       "REPORTBATTERYSTATUS": "Rapporter enhedens batteriniveau til applikationsserveren",
       "REPORTBATTERYMARGIN": "Rapporter device link margin til applikationsserver",
       "DRRATEMIN": "Min data rate",
-      "DRRATEMINEXPLAINED": "Minimum tilladte data rate. Brugt til ADR",
+      "DRRATEMINEXPLAINED": "Minimum tilladte data rate. Skal være et tal fra 0-7. \nBrugt til ADR",
       "DRRATEMAX": "Max data rate",
-      "DRRATEMAXEXPLAINED": "Maximum tilladte data rate. Brugt til ADR",
+      "DRRATEMAXEXPLAINED": "Maximum tilladte data rate. Skal være et tal fra 0-7. \nBrugt til ADR",
       "SAVE": "Gem",
       "CANCEL": "Annuller",
       "GOBACK": "Gå tilbage",
