Changed mqtt datatarget topic placeholder + added tooltip

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -656,7 +656,8 @@
         "GIVE-QOS-PLACEHOLDER": "0, 1, 2",
         "GIVE-QOS-INFO": "QoS (Quality of Service) bestemmer vigtigheden af, at en besked leveres til modtageren. Se dokumentationen for at vide mere.",
         "GIVE-TOPIC": "Angiv hvilket topic på brokeren der skal sendes til",
-        "GIVE-TOPIC-PLACEHOLDER": "device/+/event",
+        "GIVE-TOPIC-PLACEHOLDER": "device/event",
+        "GIVE-TOPIC-INFO": "Topic'et kan være givet af den udbyder som dataen skal sendes til. Der kan ikke bruges wildcards",
         "GIVE-AUTHENTICATION-METHOD": "Vælg autentificeringsmetode",
         "USERNAME-PASSWORD": "Brugernavn og password",
         "CERTIFICATE": "Certifikat",
