Removed maxLenght from device AND gateway EUI, now removes non-hex digits on submit

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -628,7 +628,7 @@
     "NFCNTDOWN": "nfcntdown",
     "NFCNTDOWN-PLACEHOLDER": "Angiv download framerate",
     "DEVEUI": "Enheds EUI (DevEUI)",
-    "DEVEUI-PLACEHOLDER": "Enheds EUI (DevEUI)",
+    "DEVEUI-PLACEHOLDER": "Angiv DevEUI (16 tegn)",
     "SKIPFCNTCHECK": "SkipFCntCheck",
     "SKIPFCNTCHECK-NO": "Nej",
     "SKIPFCNTCHECK-YES": "Ja",
@@ -786,7 +786,7 @@
     "DESCRIPTION": "LoRaWAN gateway beskrivelse",
     "DESCRIPTION-PLACEHOLDER": "Beskrivelse af LoRaWAN gateway",
     "GATEWAYID": "Gateway id (EUI)",
-    "GATEWAYID-PLACEHOLDER": "0000-0000-0000-0000",
+    "GATEWAYID-PLACEHOLDER": "0000000000000000",
     "METADATA": "Gateway tags",
     "METADATA-PLACEHOLDER": "Angiv JSON her",
     "ALTITUDE": "Højde",
