Moved column selector to own component + implemented column selection on iot-device table

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -350,7 +350,9 @@
     "ORGANISATION": "Organisation",
     "NAME": "Navn",
     "RSSI": "RSSI (dBm)",
-    "SNR": "SNR (dB)"
+    "SNR": "SNR (dB)",
+    "DEV-EUI": "DevEUI",
+    "APP-KEY": "AppKey (OTAA)"
   },
   "LORA-GATEWAY-TABLE": {
     "NAME": "Navn",
@@ -420,7 +422,8 @@
     "NEVER": "Aldrig set"
   },
   "TABLE": {
-    "PAGINATION": "Navigér tabel"
+    "PAGINATION": "Navigér tabel",
+    "COLUMNS": "Kolonner"
   },
   "APPLICATION-TABLE-ROW": {
     "DELETE": "Slet",
