IOT-1380: Removed maxLenght from device AND gateway EUI (#147)
* Fixed routing of gateway list + fixed memory leak by unsubscribing properly from gateway fetches

* Fixed routing errors in gateway list

* Changed mqtt datatarget topic placeholder + added tooltip

* Added additional text changes from Product Owner

* Removed maxLenght from device AND gateway EUI, now removes non-hex digits on submit

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -628,7 +628,7 @@
     "NFCNTDOWN": "nfcntdown",
     "NFCNTDOWN-PLACEHOLDER": "Angiv download framerate",
     "DEVEUI": "Enheds EUI (DevEUI)",
-    "DEVEUI-PLACEHOLDER": "Enheds EUI (DevEUI)",
+    "DEVEUI-PLACEHOLDER": "Angiv DevEUI (16 tegn)",
     "SKIPFCNTCHECK": "SkipFCntCheck",
     "SKIPFCNTCHECK-NO": "Nej",
     "SKIPFCNTCHECK-YES": "Ja",
@@ -786,7 +786,7 @@
     "DESCRIPTION": "LoRaWAN gateway beskrivelse",
     "DESCRIPTION-PLACEHOLDER": "Beskrivelse af LoRaWAN gateway",
     "GATEWAYID": "Gateway id (EUI)",
-    "GATEWAYID-PLACEHOLDER": "0000-0000-0000-0000",
+    "GATEWAYID-PLACEHOLDER": "0000000000000000",
     "METADATA": "Gateway tags",
     "METADATA-PLACEHOLDER": "Angiv JSON her",
     "ALTITUDE": "Højde",
@@ -964,9 +964,9 @@
       "REPORTBATTERYSTATUS": "Rapporter enhedens batteriniveau til applikationsserveren",
       "REPORTBATTERYMARGIN": "Rapporter device link margin til applikationsserver",
       "DRRATEMIN": "Min data rate",
-      "DRRATEMINEXPLAINED": "Minimum tilladte data rate. Skal være et tal fra 0-7. \nBrugt til ADR",
+      "DRRATEMINEXPLAINED": "Minimum tilladte data rate. Brugt til ADR",
       "DRRATEMAX": "Max data rate",
-      "DRRATEMAXEXPLAINED": "Maximum tilladte data rate. Skal være et tal fra 0-7. \nBrugt til ADR",
+      "DRRATEMAXEXPLAINED": "Maximum tilladte data rate. Brugt til ADR",
       "SAVE": "Gem",
       "CANCEL": "Annuller",
       "GOBACK": "Gå tilbage",
