First set of pr changes

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -328,7 +328,7 @@
     "NAME": "Navn",
     "IOT-DEVICES": "IoT enheder",
     "UPDATED": "Senest opdateret",
-    "DATA-TARGETS": "Datatarges",
+    "DATA-TARGETS": "Datatargets",
     "STATUS": "Status",
     "START-DATE": "Startdato",
     "END-DATE": "Slutdato",
