some PR changes before merge

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -936,7 +936,7 @@
     "DELETE-NOT-ALLOWED-HAS-LORAWAN-DEVICE": "Device profilen kan ikke blive slettet, da den er i brug af en eller flere LoRaWAN enheder.",
     "OTAA-INFO-MISSING": "OTAA nøgle mangler eller er ikke gyldig.",
     "ABP-INFO-MISSING": "ABP nøgle mangler eller er ikke gyldig.",
-    "DIFFERENT-SERVICE-PROFILE": "Dine devices har forskellige service profiles. De skal have den samme service profile!",
+    "DIFFERENT-SERVICE-PROFILE": "Dine devices har ved oprettelse haft forskellige service profiles. De skal have haft den samme service profile ved oprettelse!",
     "WRONG-SERVICE-PROFILE": "Dine devices har forkert service profile. Vælg devices som har samme service profile som din multicast.",
     "ID-DOES-NOT-EXIST": "Id'et findes ikke",
     "APPLICATION-DOES-NOT-EXIST": "Den tilhørende applikation findes ikke",
@@ -950,40 +950,11 @@
     "INVALID-DATE": "Datoen er ugyldig",
     "USER-ALREADY-HAVE-MAIL": "Brugeren har allerede sat en email",
     "EMAIL-ALREADY-IN-USE": "Den valgte email er allerede i brug. Kontakt din lokale administrator for hjælp."
+
   },
   "PROFILES": {
     "NAME": "LoRaWAN profiler",
     "DELETE-FAILED":"Slet fejlede",
-    "SERVICE_PROFILE": {
-      "CREATED":"Oprettet",
-      "UPDATED":"Senest opdateret",
-      "DETAILS": "Detaljer",
-      "DELETE-FROM-LIST":"Slet",
-      "HEADLINE": "Service profiler",
-      "DROPDOWN": "Håndter service profil",
-      "CREATE-NEW-SERVICE-PROFILE": "Opret service profile",
-      "EDIT": "Rediger profil",
-      "DELETE": "Slet profil",
-      "NAME": "Service profil navn",
-      "NAME_PLACEHOLDER": "service-profil-navn-uden-mellemrum",
-      "ADDGWMETADATA": "Tilføj gateway meta-data",
-      "ADDGWMETADATAEXPLAINED": "GW-metadata (RSSI, SNR, GW geoloc. Osv.) Føjes til den pakke, der sendes til applikationsserveren",
-      "NWKGEOLOC": "Aktivér geografisk placering af netværk",
-      "NWKGEOLOCEXPLAINED": "Når den er aktiveret, forsøger netværksserveren at løse placeringen af â€‹â€‹enhederne under denne serviceprofil. Bemærk, at du skal have gateways, der understøtter fine-timestamp, og at netværksserveren skal konfigureres for at yde support til geolokalisering.",
-      "REPORT_END_DEVICE": "Report end-device margin",
-      "DEVICEFREQUENCY": "Device status request frequency",
-      "DEVICEFREQUENCYEXPLANIED": "Frekvens til at starte en anmodning om end-device (requests pr. dag).",
-      "REPORTBATTERYSTATUS": "Rapporter enhedens batteriniveau til applikationsserveren",
-      "REPORTBATTERYMARGIN": "Rapporter device link margin til applikationsserver",
-      "DRRATEMIN": "Min data rate",
-      "DRRATEMINEXPLAINED": "Minimum tilladte data rate. Brugt til ADR",
-      "DRRATEMAX": "Max data rate",
-      "DRRATEMAXEXPLAINED": "Maximum tilladte data rate. Brugt til ADR",
-      "SAVE": "Gem",
-      "CANCEL": "Annuller",
-      "GOBACK": "Gå tilbage",
-      "ID": "Service profilens id"
-    },
     "DEVICE_PROFILE": {
       "CREATED":"Oprettet",
       "UPDATED":"Senest opdateret",
